--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,11 +1,10 @@
 <ion-tabs>
-
   <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="map">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="map"></ion-icon>
       <ion-label>Map</ion-label>
     </ion-tab-button>
-  </ion-tab-bar>
 
+  </ion-tab-bar>
 </ion-tabs>
