--- a/src/global.scss
+++ b/src/global.scss
@@ -25,4 +25,5 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-@import "~leaflet/dist/leaflet.css"
+@import "~leaflet/dist/leaflet.css";
+@import "theme/dark_theme.scss";
