Create Light and Dark theme and change ion-buttons colors

--- a/src/theme/light_theme.scss
+++ b/src/theme/light_theme.scss
@@ -1,4 +1,4 @@
-/* Dark Theme */
+/* Light Theme */
 
 :root {
     /* Red */
@@ -26,9 +26,9 @@
 	--ion-color-white-tint: #f2f0f3;
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
     /*
-     * Dark Colors
+     * Lights Colors
      * -------------------------------------------
      */
 
