--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,5 +6,10 @@
       <ion-label>Map</ion-label>
     </ion-tab-button>
 
+    <ion-tab-button tab="lines">
+      <ion-icon name="balloon"></ion-icon>
+      <ion-label>lines</ion-label>
+    </ion-tab-button>
+
   </ion-tab-bar>
 </ion-tabs>
