--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -6,4 +6,55 @@
 
 <ion-content>
 
+  <div class="settingsDiv">
+
+    <ion-grid fixed>
+
+      <ion-row>
+        <ion-col size="4">
+          <ion-icon name="language"></ion-icon>
+        </ion-col>
+        <ion-item>
+        <ion-col size="8">
+            <ion-label>Langue</ion-label>
+            <ion-select value="Français">
+              <ion-select-option value="Français" selected>Français</ion-select-option>
+              <ion-select-option value="English">English</ion-select-option>
+            </ion-select>
+        </ion-col>
+      </ion-item>
+      </ion-row>
+
+      <ion-row>
+        <ion-col>
+          <ion-icon name="bookmark-outline"></ion-icon>
+        </ion-col>
+        <ion-item>
+          <ion-label>Page d'accueil</ion-label>
+          <ion-select value="Carte" multiple="true">
+            <ion-select-option value="Carte" selected>Carte</ion-select-option>
+            <ion-select-option value="Favoris">Favoris</ion-select-option>
+            <ion-select-option value="Itinéraire">Itinéraire</ion-select-option>
+            <ion-select-option value="Lignes">Lignes</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-row>
+      
+      <ion-row>
+        <ion-col>
+          <ion-icon name="invert-mode-outline"></ion-icon>
+        </ion-col>
+        <ion-item>
+          <ion-label>Thème</ion-label>
+          <ion-select value="Sombre" multiple="true">
+            <ion-select-option value="Sombre" selected>Sombre</ion-select-option>
+            <ion-select-option value="Clair">Clair</ion-select-option>
+          </ion-select>
+        </ion-item>
+      </ion-row>
+
+    </ion-grid>
+
+  </div>
+
 </ion-content>
