--- a/src/theme/light_theme.scss
+++ b/src/theme/light_theme.scss
@@ -67,4 +67,8 @@
         --color: var(--ion-color-red);
         --color-selected: var(--ion-color-red-tint);
     }
+
+    ion-title {
+        --color: var(--ion-color-red);
+    }
 }
