--- a/src/app/lines/lines.page.scss
+++ b/src/app/lines/lines.page.scss
@@ -1,3 +1,12 @@
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+}
+.summary {
+    width: max-content;
+}
+
 .shortName {
     color: #FFFFFF;
     text-align: center;
@@ -5,4 +14,6 @@
     width: 30px;
     height: 30px;
     border-radius: 20px;
+    margin-top: 3px;
+    margin-left: 3px;
 }
