--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -26,9 +26,9 @@
      }
 
      ion-item {
-
         margin: auto 0;
-        --ion-item-background: var(--ion-color-dark) !important;
+        --ion-item-background: var(--ion-color-dark);
+        border-bottom: solid 1px var(--ion-color-red);
          
         ion-label {
             color: var(--ion-color-red);
@@ -38,6 +38,10 @@
         ion-select {
             color: var(--ion-color-red-tint);
             font-size: 1.25rem;
+            max-width: 100%;
+        }
+        ion-select::part(icon) { 
+            color: var(--ion-color-red); 
         }
      }
 
@@ -56,7 +60,49 @@
      * -------------------------------------------
      */
 
-     .settingsDiv {
-        background-color: black;
-     }
+     ion-content {
+      --ion-background-color: var(--ion-color-light);
+   }
+
+   ion-col {
+      display: contents;
+   }
+
+   ion-row {
+      padding: 2%;
+   }
+
+   ion-icon {  
+      color: var(--ion-color-red);
+      padding: 1rem;
+      font-size: 2rem;
+   }
+
+   ion-item {
+      margin: auto 0;
+      --ion-item-background: var(--ion-color-dark-contrast);
+      border-bottom: solid 1px var(--ion-color-red);
+       
+      ion-label {
+          color: var(--ion-color-red);
+          font-size: 1rem;
+      }
+
+      ion-select {
+          color: var(--ion-color-red-tint);
+          font-size: 1.25rem;
+          max-width: 100%;
+      }
+      ion-select::part(icon) { 
+          color: var(--ion-color-red); 
+      }
+   }
+
+   .settingsDiv {
+      background-color: var(--ion-color-dark-contrast);
+      margin: 5%;
+      padding: 5%;
+      border-radius: 0.5rem;
+      box-shadow: 0.25rem 0.5rem 1rem black;
+   }
 }
