--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,6 +5,10 @@
       <ion-icon name="map"></ion-icon>
       <ion-label>Map</ion-label>
     </ion-tab-button>
+    <ion-tab-button tab="route">
+      <ion-icon name="bus-outline"></ion-icon>
+      <ion-label>Itinéraire</ion-label>
+    </ion-tab-button>
     <ion-tab-button tab="settings">
       <ion-icon name="settings"></ion-icon>
       <ion-label>Paramètres</ion-label>
