--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -5,5 +5,56 @@
 </ion-header>
 
 <ion-content>
-
+  <div class="stopsDiv">
+    <ion-grid>
+      <ion-row>
+        <ion-col>
+          <ion-button class="stopButton" fill="clear">Départ</ion-button>
+          <ion-button class="stopButton" fill="clear">Arrivée</ion-button>
+        </ion-col>
+        <ion-col>
+          <ion-button class="reverseButton" fill="clear">
+            <ion-icon name="arrow-down-outline"></ion-icon>
+            <ion-icon name="arrow-up-outline"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <div class="dateTimeDiv">
+    <ion-label>Date & Heure</ion-label>
+    <ion-item>
+      <ion-datetime display-format="DD.MM.YYYY"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-select value="goAfter">
+        <ion-select-option value="goAfter">Partir après</ion-select-option>
+        <ion-select-option value="arriveBefore">Arriver avant</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-datetime display-format="HH:mm"></ion-datetime>
+    </ion-item>
+  </div>
+  <div class="pmrAccessDiv">
+    <ion-label>Accès PMR</ion-label>
+    <ion-toggle></ion-toggle>
+  </div>
+  <div class="bottomDiv">
+    <ion-button fill="clear">
+      <ion-icon name="heart-outline"></ion-icon>
+    </ion-button>
+    <ion-segment value="Nouveau" (ionChange)="segmentChanged($event)">
+      <ion-segment-button value="new">
+        <ion-label>Nouveau</ion-label>
+      </ion-segment-button>
+      <ion-segment-button value="favorites">
+        <ion-label>Favoris</ion-label>
+      </ion-segment-button>
+    </ion-segment>
+    <ion-button fill="clear">
+      <ion-icon name="navigate-outline"></ion-icon>
+      Go
+    </ion-button>
+  </div>
 </ion-content>
