--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -7,7 +7,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="lines">
-      <ion-icon name="balloon"></ion-icon>
+      <ion-icon name="git-branch"></ion-icon>
       <ion-label>lines</ion-label>
     </ion-tab-button>
 
