--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -24,16 +24,17 @@
   <div class="dateTimeDiv">
     <ion-label>Date & Heure</ion-label>
     <ion-item>
-      <ion-datetime display-format="DD.MM.YYYY"></ion-datetime>
+      <ion-label>Awesome Label</ion-label>
     </ion-item>
     <ion-item>
-      <ion-select value="goAfter">
+      <ion-select value="goAfter" class="selectAfterBefore"
+          [interfaceOptions]="customPopoverOptions" interface="popover">
         <ion-select-option value="goAfter">Partir après</ion-select-option>
         <ion-select-option value="arriveBefore">Arriver avant</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item>
-      <ion-datetime display-format="HH:mm"></ion-datetime>
+      <ion-datetime display-format="HH:mm" locale="fr-FR" presentation="time"></ion-datetime>
     </ion-item>
   </div>
   <div class="pmrAccessDiv">
