add location button

--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-searchbar placeholder="Addresse.."></ion-searchbar>
-    <ion-button slot="end">
+    <ion-searchbar placeholder="Addresse, arret.."></ion-searchbar>
+    <ion-button slot="end" (click)="locate()">
       <ion-icon name="locate"></ion-icon>
     </ion-button>
   </ion-toolbar>
