--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-searchbar placeholder="Addresse, arret.."></ion-searchbar>
+    <ion-searchbar placeholder="Addresse, arret.." (ionInput)="searchUpdate($event.target.value)" [(ngModel)]="searchbar"></ion-searchbar>
     <ion-button slot="end" (click)="locate()">
       <ion-icon name="locate"></ion-icon>
     </ion-button>
