--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -103,6 +103,6 @@
       margin: 5%;
       padding: 5%;
       border-radius: 0.5rem;
-      box-shadow: 0.25rem 0.5rem 1rem black;
+      box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark);
    }
 }
