--- a/src/app/route/route.page.html
+++ b/src/app/route/route.page.html
@@ -10,6 +10,28 @@
       <ion-row>
         <ion-col>
           <ion-button class="stopButton" fill="clear">Départ</ion-button>
+          
+<!-- 
+          <ion-modal [isOpen]="true">
+            <ng-template>
+              <ion-content>
+                <ion-searchbar [(ngModel)]="departure" (ionChange)="start()"></ion-searchbar>
+                <ion-list>
+                  <ion-item *ngFor="let stop of allStops">
+                    <ion-label>{{ stop.stopName }}</ion-label>
+                  </ion-item>
+                </ion-list>
+              </ion-content>
+            </ng-template>
+          </ion-modal> -->
+
+          <ion-list>
+            <ion-item *ngFor="let stop of allStops">
+              <ion-label class="city">{{ stop.parentStation.city }}</ion-label>
+              <ion-label class="stopName">{{ stop.parentStation.name }}</ion-label>
+            </ion-item>
+          </ion-list>
+          
           <ion-button class="stopButton" fill="clear">Arrivée</ion-button>
         </ion-col>
         <ion-col>
@@ -23,7 +45,7 @@
 
   <div *ngIf="favoriteTrip">
     <ion-list>
-      <ion-item>
+      <ion-item *ngFor="let trip of favoriteListTrip">
         <ion-label>Pokémon Yellow</ion-label>
       </ion-item>
     </ion-list>
@@ -97,4 +119,5 @@
       Go
     </ion-button>
   </div>
+
 </ion-content>
