--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -1,4 +1,81 @@
+@import "../../theme/dark_theme.scss";
+@import "../../theme/light_theme.scss";
+
 #map{
     height: 100%;
     width: 100%;
+}
+
+@media (prefers-color-scheme: dark) {
+    /*
+     * Darks Colors
+     * -------------------------------------------
+     */
+    .header {
+        display: flex;
+        position: fixed;
+        right: 0;
+        left: 0;
+        z-index: 1;
+        margin: 2%;
+
+        ion-searchbar {
+            height: 3rem;
+            z-index: 2;
+            margin: 2%;
+            background-color: var(--ion-color-dark);
+            border-radius: 0.5rem;
+            box-shadow: 0.25rem 0.5rem 1rem black;
+        }
+
+        ion-button {
+            z-index: 3;
+            margin: 2%;
+            background-color: var(--ion-color-dark);
+            border-radius: 0.5rem;
+            box-shadow: 0.25rem 0.5rem 1rem black;
+    
+            ion-icon {
+                color: var(--icon-color-red);
+                font-size: xx-large;
+            }
+        }
+    }
+}
+
+@media (prefers-color-scheme: light) {
+    /*
+     * Lights Colors
+     * -------------------------------------------
+     */
+    .header {
+        display: flex;
+        position: fixed;
+        right: 0;
+        left: 0;
+        z-index: 1;
+        margin: 2%;
+
+        ion-searchbar {
+            height: 3rem;
+            z-index: 2;
+            margin: 2%;
+            background-color: var(--ion-color-light);
+            border-radius: 0.5rem;
+            box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
+        }
+
+        ion-button {
+            z-index: 3;
+            margin: 2%;
+            background-color: var(--ion-color-light);
+            border-radius: 0.5rem;
+            box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
+    
+            ion-icon {
+                color: var(--icon-color-red);
+                font-size: xx-large;
+            }
+        }
+    }
 }
