--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
       <ion-label>Carte</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="route">
-      <ion-icon name="bus-outline"></ion-icon>
+      <ion-icon name="subway"></ion-icon>
       <ion-label>Itinéraire</ion-label>
     </ion-tab-button>
     <ion-tab-button tab="lines">
