--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -10,3 +10,20 @@
 <ion-content>
   <div id="map"></div>
 </ion-content>
+
+<div class="footer">
+  <ion-buttons>
+    <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+      <ion-icon name="subway-outline"></ion-icon>
+      <ion-label>Tram</ion-label>
+    </ion-button>
+    <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+      <ion-icon name="heart-outline"></ion-icon>
+      <ion-label>Favoris</ion-label>
+    </ion-button>
+    <ion-button (click)="onClick()" expand="block" fill="clear" shape="round">
+      <ion-icon name="star-outline"></ion-icon>
+      <ion-label>Personnaliser</ion-label>
+    </ion-button>
+  </ion-buttons>
+</div>
