--- a/src/app/map/map.page.scss
+++ b/src/app/map/map.page.scss
@@ -23,12 +23,18 @@
             height: 3rem;
             z-index: 2;
             margin: 2%;
+            padding: 2%;
             background-color: var(--ion-color-dark);
             border-radius: 0.5rem;
             box-shadow: 0.25rem 0.5rem 1rem black;
+            --placeholder-color: var(--ion-color-red-tint);
+            --icon-color: var(--ion-color-red);
+            --background: var(--ion-color-dark-tint);
+            --border-radius: 0.5rem;
         }
 
         ion-button {
+            height: 3rem;
             z-index: 3;
             margin: 2%;
             background-color: var(--ion-color-dark);
@@ -60,13 +66,18 @@
             height: 3rem;
             z-index: 2;
             margin: 2%;
+            padding: 2%;
             background-color: var(--ion-color-light);
             border-radius: 0.5rem;
             box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
+            --placeholder-color: var(--ion-color-red-tint);
+            --icon-color: var(--ion-color-red);
+            --background: var(--ion-color-dark-contrast);
+            --border-radius: 0.5rem;
         }
 
         ion-button {
-            z-index: 3;
+            height: 3rem;
             margin: 2%;
             background-color: var(--ion-color-light);
             border-radius: 0.5rem;
