--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -8,8 +8,8 @@
      */
 
     ion-tab-button {
-        --color: var(--ion-color-red);
-        --color-selected: var(--ion-color-red-tint);
+        --color: var(--ion-color-accent);
+        --color-selected: var(--ion-color-accent-tint);
     }
 }
 
@@ -20,7 +20,7 @@
      */
 
     ion-tab-button {
-        --color: var(--ion-color-red);
-        --color-selected: var(--ion-color-red-tint);
+        --color: var(--ion-color-accent);
+        --color-selected: var(--ion-color-accent-tint);
     }
 }
