--- a/src/theme/light_theme.scss
+++ b/src/theme/light_theme.scss
@@ -1,13 +1,13 @@
 /* Light Theme */
 
 :root {
-    /* Red */
-	--ion-color-red: #b22d24;
-	--ion-color-red-rgb: 178,45,36;
-	--ion-color-red-contrast: #ffffff;
-	--ion-color-red-contrast-rgb: 255,255,255;
-	--ion-color-red-shade: #9d2820;
-	--ion-color-red-tint: #ba423a;
+    /* Accent Color */
+	--ion-color-accent: #b22d24;
+	--ion-color-accent-rgb: 178,45,36;
+	--ion-color-accent-contrast: #ffffff;
+	--ion-color-accent-contrast-rgb: 255,255,255;
+	--ion-color-accent-shade: #9d2820;
+	--ion-color-accent-tint: #ba423a;
 
     /* Grey */
     --ion-color-grey: #232323;
@@ -33,13 +33,13 @@
      */
 
     body {
-        /* Red */
-        --ion-color-red: #b22d24;
-        --ion-color-red-rgb: 178,45,36;
-        --ion-color-red-contrast: #ffffff;
-        --ion-color-red-contrast-rgb: 255,255,255;
-        --ion-color-red-shade: #9d2820;
-        --ion-color-red-tint: #e8705b;
+        /* Accent Color */
+        --ion-color-accent: #b22d24;
+        --ion-color-accent-rgb: 178,45,36;
+        --ion-color-accent-contrast: #ffffff;
+        --ion-color-accent-contrast-rgb: 255,255,255;
+        --ion-color-accent-shade: #9d2820;
+        --ion-color-accent-tint: #e8705b;
     
         /* Dark */
         --ion-color-dark: #232323;
@@ -59,11 +59,11 @@
     }
 
     ion-button {
-        --color: var(--ion-color-red);
-        --color-selected: var(--ion-color-red-tint);
+        --color: var(--ion-color-accent);
+        --color-selected: var(--ion-color-accent-tint);
     }
 
     ion-title {
-        --color: var(--ion-color-red);
+        --color: var(--ion-color-accent);
     }
 }
