--- a/src/app/choice-stop/choice-stop.page.html
+++ b/src/app/choice-stop/choice-stop.page.html
@@ -12,7 +12,7 @@
   </div>
 
   <ion-list>
-    <ion-item *ngFor="let stop of allStops">
+    <ion-item *ngFor="let stop of allStops | stopFilter: searched">
       <span (click)="stopChoosen(stop.stopId)">
         <ion-label class="stopName">{{ stop.parentStation.name }}</ion-label>
         <ion-label class="city">{{ stop.parentStation.city }}</ion-label>
