--- a/src/app/route/route.page.scss
+++ b/src/app/route/route.page.scss
@@ -1,5 +1,4 @@
-@import "../../theme/dark_theme.scss";
-@import "../../theme/light_theme.scss";
+@import "../../theme/variables.scss";
 
 @media (prefers-color-scheme: dark) {
     /*
