--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -34,12 +34,10 @@
         }
      }
 
-     .settingsDiv {
-        background-color: var(--ion-color-dark);
+     .contentDiv {
         margin: 5%;
         padding: 5%;
         border-radius: 0.5rem;
-        box-shadow: 0.25rem 0.5rem 1rem black;
      }
 }
 
