--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,7 +1,8 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
-:root {/* Accent Color */
+:root {
+  /* Accent Color */
 	--ion-color-accent: #b22d24;
 	--ion-color-accent-rgb: 178,45,36;
 	--ion-color-accent-contrast: #ffffff;
@@ -9,21 +10,21 @@
 	--ion-color-accent-shade: #9d2820;
 	--ion-color-accent-tint: #ba423a;
 
-    /* Grey */
-    --ion-color-grey: #232323;
-	--ion-color-grey-rgb: 35,35,35;
-	--ion-color-grey-contrast: #ffffff;
-	--ion-color-grey-contrast-rgb: 255,255,255;
-	--ion-color-grey-shade: #1f1f1f;
-	--ion-color-grey-tint: #393939;
-
-    /* White */
-	--ion-color-white: #f0eef2;
-	--ion-color-white-rgb: 240,238,242;
-	--ion-color-white-contrast: #000000;
-	--ion-color-white-contrast-rgb: 0,0,0;
-	--ion-color-white-shade: #d3d1d5;
-	--ion-color-white-tint: #f2f0f3;
+  /* Dark */
+  --ion-color-dark: #232323;
+	--ion-color-dark-rgb: 35,35,35;
+	--ion-color-dark-contrast: #ffffff;
+	--ion-color-dark-contrast-rgb: 255,255,255;
+	--ion-color-dark-shade: #1f1f1f;
+	--ion-color-dark-tint: #393939;
+    
+  /* Light */
+	--ion-color-light: #f0eef2;
+	--ion-color-light-rgb: 240,238,242;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #d3d1d5;
+	--ion-color-light-tint: #f2f0f3;
 }
 
 ion-tab-button {
@@ -56,14 +57,48 @@ ion-select {
 
 ion-app.dark {
 
+  ion-toolbar {
+    --ion-background-color: var(--ion-color-dark);
+  }
+  
+  ion-tab-bar {
+    --ion-background-color: var(--ion-color-dark);
+  }
+
   ion-content {
     --ion-background-color: var(--ion-color-dark-tint);
- }
+  }
+
+  .contentDiv {
+    background-color: var(--ion-color-dark);
+    box-shadow: 0.25rem 0.5rem 1rem black;
+  }
+
+  ion-card {
+    box-shadow: 0.25rem 0.5rem 1rem black;
+  }
 }
 
 ion-app.light {
 
+  ion-toolbar {
+    --ion-background-color: var(--ion-color-light);
+  }
+  
+  ion-tab-bar {
+    --ion-background-color: var(--ion-color-light);
+  }
+
   ion-content {
     --ion-background-color: var(--ion-color-light-tint);
- }
+  }
+
+  .contentDiv {
+    background-color: var(--ion-color-light);
+    box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
+  }
+
+  ion-card {
+    box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
+  }
 }
