--- a/src/app/settings/settings.page.scss
+++ b/src/app/settings/settings.page.scss
@@ -1,95 +1,35 @@
 @import "../../theme/variables.scss";
 
-@media (prefers-color-scheme: dark) {
-    /*
-     * Darks Colors
-     * -------------------------------------------
-     */
-
-     ion-col {
-        display: contents;
-     }
-
-     ion-row {
-        padding: 2%;
-     }
-
-     ion-icon {  
-        padding: 1rem;
-        font-size: 2rem;
-     }
-
-     ion-item {
-        margin: auto 0;
-        --ion-item-background: var(--ion-color-dark);
-        border-bottom: solid 1px var(--ion-color-accent);
-         
-        ion-label {
-            color: var(--ion-color-accent);
-            font-size: 1rem;
-        }
-
-        ion-select {
-            max-width: 100%;
-        }
-     }
-
-     .contentDiv {
-        margin: 5%;
-        padding: 5%;
-        border-radius: 0.5rem;
-     }
+ion-col {
+   display: contents;
 }
 
-@media (prefers-color-scheme: light) {
-    /*
-     * Lights Colors
-     * -------------------------------------------
-     */
+ion-row {
+   padding: 2%;
+}
 
-     ion-content {
-      --ion-background-color: var(--ion-color-light);
-   }
+ion-icon {  
+   padding: 1rem;
+   font-size: 2rem;
+}
 
-   ion-col {
-      display: contents;
-   }
+.contentDiv {
+   margin: 5%;
+   padding: 5%;
+   border-radius: 0.5rem;
+}
 
-   ion-row {
-      padding: 2%;
-   }
-
-   ion-icon {  
-      color: var(--ion-color-accent);
-      padding: 1rem;
-      font-size: 2rem;
-   }
-
-   ion-item {
-      margin: auto 0;
-      --ion-item-background: var(--ion-color-dark-contrast);
-      border-bottom: solid 1px var(--ion-color-accent);
+ion-item {
+   margin: auto 0;
+   border-bottom: solid 1px var(--ion-color-accent);
+   --ion-item-background: transparent;
        
-      ion-label {
-          color: var(--ion-color-accent);
-          font-size: 1rem;
-      }
-
-      ion-select {
-          color: var(--ion-color-accent-tint);
-          font-size: 1.25rem;
-          max-width: 100%;
-      }
-      ion-select::part(icon) { 
-          color: var(--ion-color-accent); 
-      }
+   ion-label {
+      color: var(--ion-color-accent);
+      font-size: 1rem;
    }
 
-   .settingsDiv {
-      background-color: var(--ion-color-dark-contrast);
-      margin: 5%;
-      padding: 5%;
-      border-radius: 0.5rem;
-      box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark);
+   ion-select {
+      max-width: 100%;
    }
 }
