--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -50,9 +50,14 @@ ion-select {
   color: var(--ion-color-accent-tint);
   font-size: 1.25rem;
   
-  ion-select::part(icon) { 
+  &::part(icon) { 
     color: var(--ion-color-accent); 
   }
+
+  &::part(text) {
+    color: var(--ion-color-accent-tint);
+  }
+
 }
 
 ion-app.dark {
@@ -82,19 +87,19 @@ ion-app.dark {
 ion-app.light {
 
   ion-toolbar {
-    --ion-background-color: var(--ion-color-light);
+    --ion-background-color: white;
   }
   
   ion-tab-bar {
-    --ion-background-color: var(--ion-color-light);
+    --ion-background-color: white;
   }
 
   ion-content {
-    --ion-background-color: var(--ion-color-light-tint);
+    --ion-background-color: var(--ion-color-light);
   }
 
   .contentDiv {
-    background-color: var(--ion-color-light);
+    background-color: white;
     box-shadow: 0.25rem 0.5rem 1rem var(--ion-color-dark-tint);
   }
 
