--- a/src/app/map/map.page.html
+++ b/src/app/map/map.page.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <ion-searchbar placeholder="Chercher un lieu, un arrêt..." 
+  <ion-searchbar placeholder="Chercher un arrêt" 
     (ionInput)="searchUpdate($event.target.value)" [(ngModel)]="searchbar">
   </ion-searchbar>
   <ion-button (click)="locate()" fill="clear">
